--- a/substitit/index.html
+++ b/substitit/index.html
@@ -13,12 +13,30 @@
         <button>Log In</button>
         </form>
 
-        <!-- Tmp -->
+        <!-- Greeting -->
         <h1 class="hidden" id="greeting"></h1>
+
+        <!-- Clock -->
+        <h2 id="clock">00:00</h2>
+
+        <!-- Quotes -->
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
+
+        <!-- Todo List -->
+        <form id="todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter." required />
+        </form>
+        <ul id="todo-list"></ul>
 
         <!-- script connect code -->
         <script src="js/greetings.js"></script>
         <script src="js/clock.js"></script>
-
+        <script src="js/quotes.js"></script>
+        <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
+        
     </body>
 </html>
